--- a/package.json
+++ b/package.json
@@ -1,54 +1,32 @@
 {
-  "name": "food-diary",
+  "name": "miosr",
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
     "alt": "^0.18.4",
     "axios": "^0.14.0",
     "babel-runtime": "^5.8.20",
-    "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bootstrap-sass": "^3.3.6",
     "classnames": "^2.2.5",
-    "composable-middleware": "^0.3.0",
-    "compression": "^1.5.2",
-    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "errorhandler": "^1.4.2",
     "es6-promise": "^4.0.5",
     "express": "^4.13.3",
-    "express-jwt": "^3.0.0",
-    "express-session": "^1.11.3",
-    "fast-json": "0.0.2",
-    "fast-json-patch": "^1.1.1",
-    "history": "^2.1.2",
     "jade": "^1.11.0",
     "js-cookie": "^2.1.1",
-    "jsonwebtoken": "^5.0.0",
     "lodash": "^4.11.0",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
-    "moment": "^2.17.0",
-    "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
-    "node-uuid": "^1.4.7",
     "normalize.css": "^4.1.1",
     "normalizr": "^2.2.1",
-    "passport": "~0.3.2",
-    "passport-facebook": "^2.0.0",
-    "passport-google-oauth": "~0.2.0",
-    "passport-local": "^1.0.0",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.5",
-    "react-bootstrap-autosuggest": "^0.4.1",
     "react-dom": "^15.0.1",
-    "react-if": "^2.1.0",
     "react-router": "^2.4.1",
-    "react-router-bootstrap": "^0.23.0",
     "request": "^2.69.0",
     "request-promise": "^2.0.0",
-    "serve-favicon": "^2.3.0",
-    "susy": "^2.2.12",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
