--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "method-override": "^2.3.5",
     "morgan": "~1.6.1",
     "normalize.css": "^4.1.1",
-    "normalizr": "^2.2.1",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.5",
     "react-dom": "^15.0.1",
     "react-router": "^2.4.1",
     "request": "^2.69.0",
-    "request-promise": "^2.0.0",
-    "whatwg-fetch": "^1.0.0"
+    "request-promise": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -139,8 +137,7 @@
   "scripts": {
     "start": "gulp start:dist",
     "test": "gulp test",
-    "postinstall": "[ \"$NODE_ENV\" = production ] || exit 0; gulp build:dist",
-    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+    "postinstall": "[ \"$NODE_ENV\" = production ] || exit 0; gulp build:dist"
   },
   "private": true
 }
