--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.14.0",
     "babel-runtime": "^5.8.20",
     "bootstrap-sass": "^3.3.6",
-    "classnames": "^2.2.5",
+    "classonames": "^2.2.5",
     "es6-promise": "^4.0.5",
     "express": "^4.13.3",
     "js-cookie": "^2.1.1",
