--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^0.23.1",
     "del": "^2.0.2",
     "enzyme": "^2.3.0",
+    "es6-promise": "^4.1.1",
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
