--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
   "version": "0.0.0",
   "dependencies": {
     "alt": "^0.18.4",
-    "axios": "^0.14.0",
-    "babel-runtime": "^5.8.20",
+    "axios": "^0.17.1",
+    "babel-runtime": "^6.26.0",
     "bootstrap-sass": "^3.3.6",
-    "classonames": "^2.2.5",
+    "classnames": "^2.2.5",
     "express": "^4.13.3",
     "js-cookie": "^2.1.1",
     "lodash": "^4.11.0",
-    "morgan": "~1.6.1",
-    "normalize.css": "^4.1.1",
-    "react": "^15.0.1",
-    "react-bootstrap": "^0.30.5",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.4.1",
+    "morgan": "~1.9.0",
+    "normalize.css": "^7.0.0",
+    "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
     "request": "^2.69.0",
-    "request-promise": "^2.0.0"
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
     "axios-mock-adapter": "^1.7.1",
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
     "babel-plugin-rewire": "^1.0.0-rc-3",
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
@@ -37,79 +36,78 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "bdd-lazy-var": "^1.3.1",
-    "chai": "^3.2.0",
-    "chai-as-promised": "^5.1.0",
-    "chai-enzyme": "^0.4.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^0.8.0",
     "chai-things": "^0.2.0",
     "core-js": "^2.4.1",
-    "css-loader": "^0.23.1",
-    "del": "^2.0.2",
-    "enzyme": "^2.3.0",
+    "css-loader": "^0.28.7",
+    "del": "^3.0.0",
+    "enzyme": "^3.2.0",
     "es6-promise": "^4.1.1",
-    "eslint": "^2.10.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.8.5",
+    "file-loader": "^1.1.5",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-debug": "^2.1.2",
-    "gulp-eslint": "^2.0.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-debug": "^3.1.0",
+    "gulp-eslint": "^4.0.0",
     "gulp-livereload": "^3.8.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-spawn-mocha": "^2.2.2",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-spawn-mocha": "^4.0.1",
     "gulp-util": "^3.0.5",
     "gulp-watch": "^4.3.5",
     "html-webpack-plugin": "^2.16.0",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^0.7.1",
     "json-loader": "^0.5.4",
-    "karma": "0.13.9",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-chai-plugins": "^0.6.0",
-    "karma-chrome-launcher": "~0.2.0",
+    "karma": "1.7.1",
+    "karma-babel-preprocessor": "^7.0.0",
+    "karma-chai-plugins": "^0.9.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-detect-browsers": "^2.1.0",
-    "karma-firefox-launcher": "~0.1.6",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-mocha": "^0.2.0",
+    "karma-firefox-launcher": "~1.0.1",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.0.2",
-    "karma-opera-launcher": "^0.3.0",
-    "karma-phantomjs-launcher": "~0.2.0",
-    "karma-requirejs": "~0.2.2",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-script-launcher": "~0.1.0",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "karma-requirejs": "~1.1.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-script-launcher": "~1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "~0.0.20",
-    "karma-webpack": "^1.7.0",
-    "lazypipe": "^0.2.4",
-    "mocha": "^3.1.2",
-    "node-sass": "^3.6.0",
+    "karma-webpack": "^2.0.6",
+    "lazypipe": "^1.0.1",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.3.7",
     "open": "~0.0.4",
-    "phantomjs": "^1.9.18",
-    "postcss-loader": "^0.9.1",
+    "phantomjs": "^2.1.7",
     "react-addons-test-utils": "^15.0.2",
-    "react-bootstrap-date-picker": "^3.7.0",
-    "requirejs": "~2.1.11",
-    "resolve-url-loader": "^1.4.3",
-    "run-sequence": "^1.1.0",
-    "sass-loader": "^3.2.0",
-    "sinon": "^1.16.1",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "requirejs": "~2.3.5",
+    "resolve-url-loader": "^2.2.0",
+    "run-sequence": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "sinon": "^4.1.2",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "supertest": "^1.1.0",
-    "supertest-as-promised": "^3.1.0",
-    "uglify-js": "^2.6.2",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-stream": "^3.2.0",
-    "yargs": "^4.6.0"
+    "style-loader": "^0.19.0",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2",
+    "uglify-js": "^3.1.10",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-stream": "^4.0.0",
+    "yargs": "^10.0.3"
   },
   "engines": {
-    "node": "^5.10.0",
+    "node": "^9.2.0",
     "npm": "^3.8.3"
   },
   "private": true
