--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "es6-promise": "^4.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -90,7 +91,6 @@
     "open": "~0.0.4",
     "phantomjs": "^2.1.7",
     "react-addons-test-utils": "^15.0.2",
-    "react-bootstrap-date-picker": "^5.1.0",
     "requirejs": "~2.3.5",
     "resolve-url-loader": "^2.2.0",
     "run-sequence": "^2.2.0",
