--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "axios-mock-adapter": "^1.7.1",
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
-    "babel-plugin-rewire": "^1.0.0-rc-3",
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
@@ -45,13 +45,11 @@
     "del": "^3.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "es6-promise": "^4.1.1",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
-    "exports-loader": "^0.6.3",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.0",
     "gulp-babel": "^7.0.0",
@@ -90,6 +88,7 @@
     "nodemon": "^1.3.7",
     "open": "~0.0.4",
     "phantomjs": "^2.1.7",
+    "postcss-loader": "^2.0.8",
     "react-addons-test-utils": "^15.0.2",
     "requirejs": "~2.3.5",
     "resolve-url-loader": "^2.2.0",
