--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "alt": "^0.18.4",
+    "awilix": "^2.11.1",
     "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
     "bootstrap-sass": "^3.3.6",
