Create infrastructure required for publishing of frontend Docker images (#2)
* removing uglifyjs from pipeline (throws some error I don't understand)

* documenting required environment variables

* package.json - moving some dependencies to devDependencies, changing project name, bumping up version

* adding basic Dockerfile

* introducing start.sh file which sets required environment variables

* alpine doesn't support bash shell, using sh

* babel-runtime is required by transpiled server code

* removing start, using ENV docker directive

* configuring port

* forgot to remove COPY

* should use ENTRYPOINT instead of RUN

* removoing unnecessary port configuration

* adding cloudbuild.yml file (for GC Image Builder)

* updating .travis.yml file

--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "miosr",
-  "version": "0.0.0",
+  "name": "miosr-frontend",
+  "version": "0.1.0",
   "dependencies": {
-    "alt": "^0.18.4",
-    "awilix": "^2.11.1",
-    "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
-    "bootstrap-sass": "^3.3.6",
-    "classnames": "^2.2.5",
     "express": "^4.13.3",
-    "js-cookie": "^2.1.1",
     "lodash": "^4.11.0",
-    "morgan": "~1.9.0",
-    "normalize.css": "^7.0.0",
-    "react": "^16.1.1",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.1.1",
-    "react-router": "^4.2.0",
-    "request": "^2.69.0",
-    "request-promise": "^4.2.2"
+    "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "alt": "^0.18.4",
     "autoprefixer": "^7.1.6",
+    "awilix": "^2.11.1",
+    "axios": "^0.17.1",
     "axios-mock-adapter": "^1.7.1",
     "babel": "^6.5.2",
     "babel-core": "^6.7.7",
@@ -37,10 +27,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "bdd-lazy-var": "^1.3.1",
+    "bootstrap-sass": "^3.3.6",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-enzyme": "^0.8.0",
     "chai-things": "^0.2.0",
+    "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
@@ -87,10 +79,17 @@
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
     "nodemon": "^1.3.7",
+    "normalize.css": "^7.0.0",
     "open": "~0.0.4",
     "phantomjs": "^2.1.7",
     "postcss-loader": "^2.0.8",
+    "react": "^16.1.1",
     "react-addons-test-utils": "^15.0.2",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
+    "request": "^2.69.0",
+    "request-promise": "^4.2.2",
     "requirejs": "~2.3.5",
     "resolve-url-loader": "^2.2.0",
     "run-sequence": "^2.2.0",
